--- a/index.html
+++ b/index.html
@@ -1851,23 +1851,13 @@ h2 {
     background: #ff3b6b;
     border-radius: 50%;
 }
-  .summary-divider {
-    height: 1px;
-    background: rgba(255,255,255,0.08);
-    margin: 12px 0;
-}
 
 .total-row .summary-price {
     color: #ff3b6b;
     font-weight: 700;
     font-size: 16px;
 }
-  .total-row .summary-price {
-    color: #ff3b6b;
-    font-weight: 700;
-    font-size: 16px;
-}
-
+ 
 .summary-divider {
     height: 1px;
     background: rgba(255,255,255,0.08);
@@ -1877,6 +1867,9 @@ h2 {
 .delivery-free {
     color: rgba(255,255,255,0.6);
     font-weight: 500;
+}
+  .total-row {
+    padding-top: 4px;
 }
 
 </style>
