--- a/index.html
+++ b/index.html
@@ -3355,8 +3355,7 @@ document.getElementById("cartBar").style.display = "flex";
 </label>
 
 <div class="payment-note">
-    Важно! Оплата происходит в чате с оператором после подтверждения заказа.
-    Оператор выдаст реквизиты для оплаты.
+    Важно! После подтверждения заказа в чате с  оператором, вам выдадут реквизиты для оплаты.
 </div>
 
 <label class="radio-option">
