--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ button {
     transform: scale(0.96);
 }
   #main {
-    padding-bottom: 160px;
+    padding-bottom: 110px; /* место под fixed cartBar */
 }
  
 .add-btn {
