--- a/index.html
+++ b/index.html
@@ -3658,13 +3658,7 @@ saveState();
 
    document.getElementById("main").innerHTML = html;
 
-const cartBar = document.getElementById("cartBar");
-
-if (cart.length > 0) {
-    cartBar.style.display = "flex";
-} else {
-    cartBar.style.display = "none";
-}
+updateCartBar();
 }
 
   function renderDelivery() {
