--- a/index.html
+++ b/index.html
@@ -4577,7 +4577,7 @@ isRestoringState = true;
 
 let profileData = null;   // ← ВСТАВИТЬ СЮДА
 
-async function renderProfile() {
+function renderProfile() {
 
     currentView = "profile";
     currentCategory = null;
