--- a/index.html
+++ b/index.html
@@ -1910,12 +1910,15 @@ h2 {
     background: rgba(255,59,107,0.1);
 }
   .back-btn {
-    background: none;
+    background: linear-gradient(135deg, #ff3b5c, #ff1e48);
     border: none;
-    color: #ff3b5c;
-    font-size: 16px;
-    margin-bottom: 15px;
+    padding: 10px 18px;
+    border-radius: 20px;
+    color: white;
+    font-weight: 600;
     cursor: pointer;
+    margin-bottom: 20px;
+    box-shadow: 0 0 15px rgba(255, 59, 92, 0.5);
 }
 
 </style>
