--- a/index.html
+++ b/index.html
@@ -1692,6 +1692,16 @@ button {
     font-weight: bold;
     margin-bottom: 8px;
 }
+  .order-details {
+    background: #14161a;
+    padding: 12px;
+    border-radius: 12px;
+    font-size: 13px;
+    line-height: 1.5;
+    margin-top: 8px;
+    border: 1px solid rgba(255,255,255,0.05);
+    word-break: break-word;
+}
 
 .order-card details summary {
     cursor: pointer;
@@ -4730,10 +4740,12 @@ fetch(`/api/get-profile?userId=${user.id}`)
             <div class="order-total">
                 Итого: ${order.total} ₽
             </div>
-            <details>
-                <summary>Посмотреть состав</summary>
-                <pre>${order.order_text}</pre>
-            </details>
+           <<details>
+    <summary>Посмотреть состав</summary>
+    <div class="order-details">
+        ${order.order_text.replace(/\n/g, "<br>")}
+    </div>
+</details>
         </div>
     `).join("");
 
